--- a/ai/chaos_agent/pyproject.toml
+++ b/ai/chaos_agent/pyproject.toml
@@ -5,6 +5,7 @@ description = "LLM-powered chaos engineering agent for the CKAD practice tool"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+  "dotenv>=0.9.9",
   "langchain>=0.3.25",
   "langchain-community>=0.3.24",
   "langchain-openai>=0.3.17",
